syntax = "proto3";

package service2;

service Service2 {
  rpc GetData (DataRequest) returns (DataReply) {}
}

message DataRequest {
  string query = 1;
}

message DataReply {
  string message = 1;
}